Development of product and category routes
